--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,6 @@
             border-radius: 5px;
         }
 
-        /* Colorize the fields */
         .author {
             color: #007bff;
             font-weight: bold;
@@ -63,7 +62,7 @@
         }
 
         setInterval(updateTime, 1000);
-        updateTime(); // Update immediately on load
+        updateTime();
     </script>
 
     {% for document in documents %}
